Fixed css selector (dot was missing)

--- a/tez-ui/src/main/webapp/app/styles/em-table.less
+++ b/tez-ui/src/main/webapp/app/styles/em-table.less
@@ -52,7 +52,7 @@
     align-content: stretch;
     align-items: flex-start;
 
-    .table-panel-left, table-panel-right, .table-body-left, .table-body-right {
+    .table-panel-left, .table-panel-right, .table-body-left, .table-body-right {
       order: 0;
       flex: 0 1 auto;
       align-self: auto;
